fix: push track mouseover-menu to top z-index

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ body,
         'Segoe UI Symbol';
     height: 100%;
     overflow: hidden;
+    z-index: 0;
 }
 
 body {
@@ -747,6 +748,10 @@ a:hover {
 .vis-panel-overlay:hover > span {
     opacity: 1;
     background-color: #7aaded;
+}
+
+.track-mouseover-menu {
+    z-index: 999;
 }
 
 /* Styles for the variant view controls */
